package pt.ipp.isep.dei.service;

import pt.ipp.isep.dei.domain.scenario.Scenario;

public class ScenarioService {
    public boolean validateScenario(Scenario scenario) { // TODO: Replace Object with domain.Scenario
        throw new UnsupportedOperationException("Not supported yet.");
    }
}
